--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -232,7 +232,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text=""
+                android:text="@string/Tap1_Setting_Cid"
                 android:textColor="#4B9FD5"
                 android:textSize="14sp" />
 
