--- a/app/src/main/res/layout/fragment_mine_friend_add_by_num.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_add_by_num.xml
@@ -30,7 +30,7 @@
             android:layout_marginLeft="48dp"
             android:hint="@string/SHARE_ACCOUNT"
             android:maxLength="65"
-            android:inputType="number"
+            android:inputType="textVisiblePassword"
             android:textColorHint="#60ffffff"
             android:background="@null"
             android:textSize="18sp" />
