绑定手机号修改

--- a/app/src/main/res/layout/activity_cloud_live_mesg_voice_item.xml
+++ b/app/src/main/res/layout/activity_cloud_live_mesg_voice_item.xml
@@ -45,8 +45,9 @@
             <ImageView
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
+                android:id="@+id/iv_voice_play"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/icon_call"
+                android:background="@drawable/play_voice_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
